fix anchor scrolling alignment

--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -269,6 +269,10 @@ ol {
 
 .content-section {
     padding-top: 100px;
+    h2 {
+        padding-top: 100px;
+        margin-top: -100px;
+    }
 }
 
 .download-section {
